[gd_scene load_steps=2 format=3 uid="uid://dl4hjeemwjsc7"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_qc5lb"]

[node name="PauseMenu" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.207843)
script = ExtResource("1_qc5lb")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 184.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Paused" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Resume
"

[node name="RestartLevelButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Restart Level
"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Main Menu
"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 88.0
offset_bottom = 80.0
color = Color(0, 0, 0, 1)

[node name="LevelTimes" type="Control" parent="ColorRect"]
anchors_preset = 0
offset_right = 88.0
offset_bottom = 80.0

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/LevelTimes"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/LevelTimes/CenterContainer"]
layout_mode = 2

[node name="PauseLevelOne" type="Label" parent="ColorRect/LevelTimes/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PauseLevelTwo" type="Label" parent="ColorRect/LevelTimes/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PauseLevelThree" type="Label" parent="ColorRect/LevelTimes/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PauseLevelFour" type="Label" parent="ColorRect/LevelTimes/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PauseLevelFive" type="Label" parent="ColorRect/LevelTimes/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartLevelButton" to="." method="_on_restart_level_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
